@@ -1,0 +1,9 @@
+Title: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p16
+Date: 1483958171
+Class: fix
+
+
