@@ -14,6 +14,7 @@
 
     Multisite:
     * 4145 FIX: Fixed exception when setting output_format in wrong case
+    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
 
 
 1.2.8p15:
